--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.3"
+    "nanoid": "^5.0.3",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "7.19.0",
