cloudinary creds, and user model correction

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
-DB_HOST=
-PORT=
-JWT_SECRET=
+DB_HOST= # database connection string
+PORT= # port backend listens on
+JWT_SECRET= # jwt secred key
+CLOUDINARY_NAME= # cloudinary storage user name
+CLOUDINARY_KEY= # clouinary key
+CLOUDINARY_SECRET= # cloudinary secret
