--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.1.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.12",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^5.0.3",
     "swagger-ui-express": "^5.0.0"
   },
